Spring boot (#404)
* Convert the pxf-api project to a boot project

- Provide a top level build.gradle with only pxf-api enabled
- Provide a build.gradle for pxf-api
- Migrate unit tests to JUnit 5
- Make all unit tests pass

* Remove Tomcat templates

- Remove CustomWebapploader
- Remove tomcat download from Makefile
- Remove `pxf-service/src/main/webapp/WEB-INF/web.xml`
- Remove `pxf-service/src/main/webapp/META-INF/context.xml`

* Map existing Tomcat properties to Spring Boot #351

Map the following properties used by tomcat

- PXF_PORT
- PXF_SHUTDOWN_PORT (NO LONGER NEEDED)
- PXF_JVM_OPTS
- PXF_MAX_THREADS
- PXF_DEBUG
- PXF_OOM_KILL

Also mapped properties from web.xml

From:

           <Connector acceptCount="100"
                   connectionTimeout="20000"
                   executor="tomcatThreadPool"
                   maxKeepAliveRequests="15"
                   maxHeaderCount="30000"
                   maxHttpHeaderSize="1048576"
                   port="${connector.http.port}"
                   protocol="org.apache.coyote.http11.Http11Protocol"
                   redirectPort="${connector.https.port}"/>

To:

    # Settings migrated from web.xml
    server.server-header=PXF Server
    server.tomcat.accept-count=100
    server.tomcat.connection-timeout=20000
    server.max-http-header-size=1048576
    pxf.tomcat.max-header-count=30000
    pxf.tomcat.max-header-size=1048576

* PXF Logging

Implement log4j2 logging configuration

* Migrate unit tests to JUnit 5

- Make the project compile

* Change REST endpoints when to switch the server to spring boot

- demo profile is fully functional
- migrated the following endpoints:

  - BridgeResource
  - FragmenterResource
  - WritableResource

* Update CLI scripts when to switch the server to spring boot

CLI script changes (only change implementation and not the API)

* Remove tomcat download from Makefile
* Update starts scripts
* Update 